--- a/relnotes/42.migration.md
+++ b/relnotes/42.migration.md
@@ -18,3 +18,9 @@ fixed-length hexadecimal, associative arrays will be formatted as `[ Key:
 value...]` instead of `{ Key: value... }`, qualified (`const` / `immutable`)
 arguments will be correctly formatted, as well as structs, making the output
 consistent accross ocean (as the Logger module already uses the Formatter).
+
+* `ocean.util.log.Stats`
+
+Protected `layout` field was replaced with protected `buffer` field which serves
+the same purpose but is a simple `AppendBuffer` now. Derivative classes have to
+adjust their code to use `this.buffer`.
