Typo in formatter release notes

--- a/relnotes/42.migration.md
+++ b/relnotes/42.migration.md
@@ -1,4 +1,4 @@
-## All remaining utilities utilities (Stdout, AppStatus, stream...) were switched to Formatter
+## All remaining utilities (Stdout, AppStatus, stream...) were switched to Formatter
 
 * `ocean.io.Stdout`, `ocean.io.console.AppStatus`, `ocean.io.stream.Format`,
   `ocean.text.Arguments`, `ocean.util.log.Stats`
